<resources>
    <string name="app_name">Instagram</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="dont_have_an_account">Dont have an account? |</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="no_name">no name</string>
</resources>
