<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".SignUpActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/avatar" />
    <EditText
        android:layout_width="300dp"
        android:id="@+id/userName"
        android:layout_height="wrap_content"
        android:hint="User Name"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>
    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:id="@+id/emailTV"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:layout_below="@+id/userName"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>
    <EditText
        android:layout_width="300dp"
        android:id="@+id/passwordTV"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/emailTV"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>
    <EditText
        android:layout_width="300dp"
        android:id="@+id/confirmPasswordTV"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/passwordTV"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>
    <Button
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPasswordTV"
        android:id="@+id/signup"
        android:text="@string/sign_up"
        android:background="#3F51B5"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"/>
        <TextView
            android:id="@+id/loginTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#3F51B5"/>
    </LinearLayout>

</RelativeLayout>