<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/instagram" />
    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:id="@+id/emailTV"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>
    <EditText
        android:layout_width="300dp"
        android:id="@+id/passwordTV"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/emailTV"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>
    <Button
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordTV"
        android:id="@+id/login"
        android:text="@string/log_in"
        android:background="#3F51B5"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"/>
        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="sign up"
            android:textColor="#3F51B5"/>
    </LinearLayout>
</RelativeLayout>